[package]
name = "rust_cli_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.23.1", features = ["lazy"] }
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1.0"
